--- a/rakefile
+++ b/rakefile
@@ -1,4 +1,5 @@
-require 'lafcadio/lafcadio'
+$: << 'lib'
+require 'lafcadio'
 
 @@versionStr = Lafcadio::Version
 
@@ -18,7 +19,7 @@ task :exportReleaseDir do
 end
 
 task :updateDocs do
-	Dir.chdir( 'lafcadio' )
+	Dir.chdir( 'lib' )
 	`rdoc --op ../../lafcadio.rubyforge.org/doc/`
 	Dir.chdir( '..' )
 	releaseDirPath = "../releases/#{ releaseDirName }"
